<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@drawable/mitolu" />
    
    <TextView
        android:text="@string/name"
        android:textColor="@color/grey"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp"
        android:layout_weight="1"/>

    <ScrollView
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>


    <TextView
        android:text="@string/track"
        style="@style/profile"/>

    <TextView
        android:text="@string/country"
        style="@style/profile"/>

    <TextView
        android:text="@string/email"
        style="@style/profile"/>

    <TextView
        android:text="@string/phone"
        style="@style/profile"/>

    <TextView
        android:text="@string/slack"
        style="@style/profile"/>

</LinearLayout>