<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/alc_web"
        android:layout_marginTop="150dp"
        style="@style/button"
        android:text="@string/about_alc"
        />

    <Button
        android:id="@+id/profile"
        android:layout_marginTop="70dp"
        style="@style/button"
        android:text="@string/my_profile"
        />

</LinearLayout>